LB-1693: Prevent overflow on entity pages titles

--- a/frontend/css/entity-pages.less
+++ b/frontend/css/entity-pages.less
@@ -28,7 +28,11 @@
       display: flex;
       flex-direction: column;
       min-width: 200px;
-      max-height: 410px;
+      max-height: 29em;
+      overflow: hidden;
+      > *:first-child {
+        line-height: 1em;
+      }
       .wikipedia-extract {
         margin-top: 2em;
         overflow: hidden;
